--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "private": true,
   "devDependencies": {
     "awesome-typescript-loader": "^3.2.1",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
+    "babel-minify": "^0.2.0",
     "babel-preset-env": "^1.6.0",
     "extract-comments": "^0.10.1",
     "strip-comments": "^0.4.4",
