--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-loader": "^7.1.1",
     "babel-minify-webpack-plugin": "^0.2.0",
     "babel-preset-env": "^1.6.0",
+    "crlf-helper": "^0.1.0",
     "extract-comments": "^0.10.1",
     "strip-comments": "^0.4.4",
     "ts-type-guards": "^0.1.5",
