Improve minification with module concatenation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
         "target": "es6",
         "strictNullChecks": true,
         "noImplicitAny": true,
+        "module": "ES6",
         "moduleResolution": "node",
         "preserveConstEnums": true
     }
