Move production logic to webpack.config.js

--- a/build
+++ b/build
@@ -17,7 +17,6 @@ readonly FILE_WEBPACK_OUTPUT=".webpack-output.js"
 readonly FILE_TS_CONFIG="tsconfig.json"
 readonly FILE_ENTRY="$DIR_SRC/main.ts"
 readonly CMD_WEBPACK="$DIR_NODE_MODULES/.bin/webpack"
-readonly PLUGIN_MINIFY="babel-minify-webpack-plugin"
 readonly CMD_INIT="./init"
 readonly CMD_BUILD="./build"
 readonly CMD_INSTALL="npm install"
@@ -160,7 +159,7 @@ echo
 # Run Webpack:
 if [ "$1" == "--production" ]; then
     echo "Building with minification..."
-    $CMD_WEBPACK --plugin $PLUGIN_MINIFY
+    $CMD_WEBPACK --env.production
 elif [ "$1" == "--debug" ]; then
     echo "Building with source maps..."
     $CMD_WEBPACK --devtool inline-source-map
