Make tree-shaking work properly

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
         "jsxFactory": "h",
         "target": "es6",
         "strict": true,
-        "module": "CommonJS",
+        "module": "es2015",
         "moduleResolution": "node",
         "preserveConstEnums": true
     },
