--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
   "private": true,
   "devDependencies": {
+    "@types/node": "^10.5.2",
+    "@types/webpack": "^4.4.6",
     "awesome-typescript-loader": "^3.2.1",
     "babel-minify-webpack-plugin": "^0.3.1",
     "crlf-helper": "^0.1.0",
+    "cross-env": "^5.2.0",
+    "css-loader": "^1.0.0",
     "extract-comments": "^0.10.1",
+    "node-sass": "^4.9.2",
+    "node-sass-utils": "^1.1.2",
     "preact": "^8.2.7",
     "replace": "^0.3.0",
+    "sass-loader": "^7.0.3",
     "strip-comments": "^0.4.4",
+    "to-string-loader": "^1.1.5",
+    "ts-node": "^7.0.0",
     "ts-preferences": "^0.8.0",
     "ts-type-guards": "^0.4.0",
+    "tsconfig-paths": "^3.4.2",
     "typescript": "^2.9.2",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8",
