--- a/tsconfig.webpack.json
+++ b/tsconfig.webpack.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "strict": true,
         "module": "commonjs",
         "target": "es5",
         "esModuleInterop": true
