--- a/tsconfig.webpack.json
+++ b/tsconfig.webpack.json
@@ -2,7 +2,10 @@
     "compilerOptions": {
         "strict": true,
         "module": "commonjs",
-        "target": "es5",
+        "target": "es6",
+        "lib": [
+            "es2018"
+        ],
         "esModuleInterop": true
     }
 }
