/bin/bash -> /usr/bin/env bash

--- a/build
+++ b/build
@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/usr/bin/env bash
 
 readonly ERROR_PREFIX=$'---- ERROR -----------------------------------------------------\n\n'
 readonly INDENTATION="    "
