Improve .user.js file content during build
The file now contains "Building..." until one of these things happens:

    * The build succeeds and the resulting userscript is written.
    * The build fails, leaving an error message in the .user.js file.

--- a/build
+++ b/build
@@ -264,6 +264,7 @@ if [ $? -gt 0 ]; then
     echo
     echo "Webpack build failed. $MSG_NOT_WRITTEN"
     echo
+    $CMD_TS_NODE $DIR_BUILD/post-fail.ts
     exit 30
 fi
 
