--- a/tsconfig.webpack.json
+++ b/tsconfig.webpack.json
@@ -1,11 +1,20 @@
 {
     "compilerOptions": {
+        "baseUrl": ".",
+        "paths": {
+            "*": [
+                "*",
+                ".userscripter/*",
+                "src/*"
+            ]
+        },
+        "target": "es6",
         "strict": true,
         "module": "commonjs",
-        "target": "es6",
+        "moduleResolution": "node",
+        "preserveConstEnums": true,
         "lib": [
             "es2018"
-        ],
-        "esModuleInterop": true
+        ]
     }
 }
