--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@types/webpack": "^4.4.7",
     "awesome-typescript-loader": "^3.2.1",
     "babel-minify-webpack-plugin": "^0.3.1",
-    "colors": "Marak/colors.js#develop",
+    "colors": "^1.3.1",
     "command-line-args": "^5.0.2",
     "crlf-helper": "^0.1.0",
     "cross-env": "^5.2.0",
