--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@types/node": "^10.5.2",
     "@types/webpack": "^4.4.7",
     "awesome-typescript-loader": "^3.2.1",
-    "babel-minify-webpack-plugin": "^0.3.1",
     "colors": "^1.3.1",
     "command-line-args": "^5.0.2",
     "crlf-helper": "^0.1.0",
@@ -26,6 +25,7 @@
     "ts-type-guards": "^0.4.0",
     "tsconfig-paths": "^3.4.2",
     "typescript": "^2.9.2",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8",
     "webpack-strip": "^0.1.0"
