Use userscript-metadata

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "tsconfig-paths": "^3.4.2",
     "typescript": "^2.9.2",
     "uglifyjs-webpack-plugin": "^1.2.7",
+    "userscript-metadata": "^1.0.0",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8",
     "webpack-strip": "^0.1.0"
