--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "loader-utils": "^1.2.3",
     "node-sass": "^4.13.0",
     "node-sass-utils": "^1.1.2",
+    "raw-loader": "^4.0.0",
     "restrict-imports-loader": "^3.2.0",
     "sass": "^1.23.7",
     "sass-loader": "^8.0.0",
