Fix clean script

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "compile-cjs": "tsc -d --module CommonJS -p .",
     "compile-esm": "tsc -d -p .",
     "build": "npm run clean && npm run compile-esm && npm run rename && npm run compile-cjs",
-    "clean": "rm -rf lib/* build/*",
+    "clean": "rm -rf lib build bin",
     "lint": "tslint --project .",
     "prepublishOnly": "npm run verify && cli-confirm 'Publish?'",
     "rename": "renamer --force --find \"/\\.js$/\" --replace \".mjs\" \"lib/**\" \"build/**\"",
