--- a/bootstrap/package.json
+++ b/bootstrap/package.json
@@ -13,7 +13,7 @@
     "ts-preferences": "^2.0.0",
     "typescript": "^3.7.4",
     "userscript-metadata": "^1.0.0",
-    "userscripter": "file:../userscripter",
+    "userscripter": "^1.0.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   }
