--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "ts-type-guards": "^0.6.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "userscript-metadata": "^1.0.0",
+    "webextension-manifest": "^1.0.0",
     "webpack": "^4.41.2",
     "webpack-userscript": "^2.5.1",
     "yargs": "^15.0.2"
