--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "userscript-metadata": "^1.0.0",
     "webpack": "^4.41.2",
-    "webpack-userscript": "2.4.0",
+    "webpack-userscript": "^2.5.1",
     "yargs": "^15.0.2"
   }
 }
