--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,6 +24,9 @@ jobs:
       - name: Install dependencies
         run: |
           npm ci
+      - name: Lint
+        run: |
+          npm run lint
       - name: Test
         run: |
           npm test
