Clean temp directories via rimraf
windows OS doesn't support `rm -rf`

--- a/bootstrap/package.json
+++ b/bootstrap/package.json
@@ -4,12 +4,13 @@
     "build-webpack-config": "tsc -p tsconfig.webpack.json",
     "build-userscript": "webpack --config .userscripter-temp/webpack.config.js",
     "build": "npm run clean && npm run build-webpack-config && npm run build-userscript && npm run clean",
-    "clean": "rm -rf .userscripter-temp"
+    "clean": "rimraf .userscripter-temp"
   },
   "dependencies": {
     "@typed/compose": "^1.0.0",
     "@types/app-root-path": "^1.2.4",
     "app-root-path": "^3.0.0",
+    "rimraf": "^3.0.2"
     "ts-preferences": "^2.0.0",
     "typescript": "^3.7.4",
     "userscript-metadata": "^1.0.0",
