Test bootstrapping (`userscripter init`) in CI
Thanks to #31, I noticed that we weren't testing the bootstrapping/init
feature at all. This PR should make sure that the `userscripter` binary
can be installed globally and that we at least always generate a
userscript that can be built.

Resolves #32.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,3 +35,12 @@ jobs:
           npm run build
         env:
           CI: true
+      - name: Install
+        run: |
+          npm install --global .
+      - name: Bootstrap
+        working-directory: bootstrapped-userscript
+        run: |
+          userscripter init
+          npm install
+          npm run build
