--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,6 +42,8 @@ jobs:
       - name: Bootstrap
         working-directory: bootstrapped-userscript
         run: |
+          echo "$PATH"
+          which userscripter
           userscripter init
           npm install
           npm run build
