Revert debugging changes

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,8 +38,9 @@ jobs:
       - name: Install
         run: |
           npm install --global .
-          echo "$PATH"
       - name: Bootstrap
         working-directory: bootstrapped-userscript
         run: |
-          echo "$PATH"
+          userscripter init
+          npm install
+          npm run build
