--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "compile-esm": "tsc -d -p .",
     "build": "npm run clean && npm run compile-esm && npm run rename && npm run compile-cjs",
     "clean": "rm -rf lib build bin",
-    "lint": "tslint --project . && tslint __tests__/*.ts",
+    "lint": "eslint . --ext .ts,.tsx",
     "prepublishOnly": "npm run verify && cli-confirm 'Publish?'",
     "rename": "renamer --force --find \"/\\.js$/\" --replace \".mjs\" \"lib/**\" \"build/**\"",
     "test": "npm run lint && npm run jest",
@@ -59,14 +59,17 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.23",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "cli-confirm": "^1.0.1",
+    "eslint": "^7.25.0",
+    "eslint-plugin-import": "^2.22.1",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
     "renamer": "^1.1.4",
     "repository-check-dirty": "^1.0.2",
     "ts-jest": "^24.1.0",
     "ts-preferences": "^2.0.0",
-    "tslint": "^5.20.1",
     "typescript": "^4.2.3"
   },
   "peerDependencies": {
