--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -1,6 +1,6 @@
 name: PR
 on:
-  pull_request:
+  pull_request: # https://securitylab.github.com/research/github-actions-preventing-pwn-requests/
     types:
       - opened
       - edited
