Use github.token instead of secrets.GITHUB_TOKEN

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -14,4 +14,4 @@ jobs:
       - name: Check PR title
         uses: amannn/action-semantic-pull-request@v3.4.0
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }}
