--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -15,3 +15,10 @@ jobs:
         uses: amannn/action-semantic-pull-request@v3.4.0
         env:
           GITHUB_TOKEN: ${{ github.token }}
+        with:
+          validateSingleCommit: true
+          subjectPattern: ^(?![a-z]).+$
+          subjectPatternError: |
+            The subject "{subject}" found in the pull request title "{title}"
+            didn't match the configured pattern. Please ensure that the subject
+            doesn't start with a lowercase character.
