--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -19,6 +19,8 @@ jobs:
           validateSingleCommit: true
           subjectPattern: ^(?![a-z]).+$
           subjectPatternError: |
-            The subject "{subject}" found in the pull request title "{title}"
-            didn't match the configured pattern. Please ensure that the subject
-            doesn't start with a lowercase character.
+            The subject
+
+                {subject}
+
+            found in the pull request title didn't match the required pattern. Please ensure that the subject doesn't start with a lowercase character.
