--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -69,6 +69,10 @@ jobs:
       - name: Build
         run: |
           npm run build
+      - name: Pack
+        id: pack
+        run: |
+          echo "::set-output name=tarball::$(npm pack)"
       - name: Clone userscript
         uses: actions/checkout@v2
         with:
@@ -81,7 +85,7 @@ jobs:
       - name: Install Userscripter
         working-directory: ${{ github.workspace }}/dependent-userscripts/${{ matrix.name }}
         run: |
-          npm install ${{ github.workspace }}
+          npm install ${{ github.workspace }}/${{ steps.pack.outputs.tarball }}
       - name: Build userscript
         working-directory: ${{ github.workspace }}/dependent-userscripts/${{ matrix.name }}
         run: |
