--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -53,10 +53,10 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        include:
+        userscript:
           - name: Better SweClockers
             repo: SimonAlling/better-sweclockers
-            node-version: 14.x
+        node-version: [12.x, 14.x]
     steps:
       - uses: actions/checkout@v1
       - name: Use Node.js ${{ matrix.node-version }}
