--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,8 +54,7 @@ jobs:
     strategy:
       matrix:
         userscript:
-          - name: Better SweClockers
-            repo: SimonAlling/better-sweclockers
+          - SimonAlling/better-sweclockers
         node-version: [12.x, 14.x]
     steps:
       - uses: actions/checkout@v1
@@ -77,16 +76,16 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: ${{ matrix.repo }}
-          path: dependent-userscripts/${{ matrix.name }}
+          path: dependent-userscripts/${{ matrix.userscript }}
       - name: Install userscript dependencies
-        working-directory: ${{ github.workspace }}/dependent-userscripts/${{ matrix.name }}
+        working-directory: ${{ github.workspace }}/dependent-userscripts/${{ matrix.userscript }}
         run: |
           npm ci
       - name: Install Userscripter
-        working-directory: ${{ github.workspace }}/dependent-userscripts/${{ matrix.name }}
+        working-directory: ${{ github.workspace }}/dependent-userscripts/${{ matrix.userscript }}
         run: |
           npm install "${{ steps.pack.outputs.tarball }}"
       - name: Build userscript
-        working-directory: ${{ github.workspace }}/dependent-userscripts/${{ matrix.name }}
+        working-directory: ${{ github.workspace }}/dependent-userscripts/${{ matrix.userscript }}
         run: |
           npm run build
