--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,6 +56,7 @@ jobs:
         userscript:
           - SimonAlling/better-sweclockers
         node-version: [12.x, 14.x]
+      fail-fast: false
     steps:
       - uses: actions/checkout@v1
       - name: Use Node.js ${{ matrix.node-version }}
