--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -77,18 +77,21 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: ${{ matrix.repo }}
-          path: dependent-userscripts/${{ matrix.userscript }}
+          path: dependent-userscripts/${{ matrix.userscript }} # Must be relative to github.workspace, apparently.
+      - name: Move userscript
+        run: |
+          mv "${{ github.workspace }}/dependent-userscripts/${{ matrix.userscript }}" "${{ runner.temp }}/${{ matrix.userscript }}"
       - name: Install userscript dependencies
-        working-directory: ${{ github.workspace }}/dependent-userscripts/${{ matrix.userscript }}
+        working-directory: ${{ runner.temp }}/${{ matrix.userscript }}
         run: |
           npm ci
       - name: Install Userscripter
-        working-directory: ${{ github.workspace }}/dependent-userscripts/${{ matrix.userscript }}
+        working-directory: ${{ runner.temp }}/${{ matrix.userscript }}
         run: |
           pwd
           ls -al
           npm install "${{ steps.pack.outputs.tarball }}"
       - name: Build userscript
-        working-directory: ${{ github.workspace }}/dependent-userscripts/${{ matrix.userscript }}
+        working-directory: ${{ runner.temp }}/${{ matrix.userscript }}
         run: |
           npm run build
