--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -55,6 +55,7 @@ jobs:
       matrix:
         repository:
           - SimonAlling/better-sweclockers
+          - SimonAlling/example-userscript
         node-version: [12.x, 14.x]
       fail-fast: false
     steps:
